# codex-linux-usage-tray-indicator

./: .gitignore  AGENT_INSTALL.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  codex-usage-tray.desktop.example  install.sh
src/: config.rs  main.rs  paths.rs  pricing.rs
